# vectoradd-openevolve

./: eval_modal_vectoradd.py  pyproject.toml  run_until_baseline.sh
vectoradd/: openevolve_config.yaml  openevolve_evaluator.py  plot_run.py  run_eval.py
vectoradd/openevolve_runs/run1/best/: best_program_info.json
vectoradd/openevolve_runs/run1/checkpoints/checkpoint_10/: best_program.py  best_program_info.json  metadata.json
vectoradd/openevolve_runs/run1/checkpoints/checkpoint_10/programs/: 484aac7d-c199-4ab8-a384-b834b558035a.json  74d4254c-65ba-43cb-ba7c-3830c4fae75e.json
vectoradd/openevolve_runs/run1/checkpoints/checkpoint_15/: best_program_info.json  metadata.json
vectoradd/openevolve_runs/run1/checkpoints/checkpoint_15/programs/: 0eb4ea56-84c5-4de3-bdaf-856ac8bad681.json  7b1c245c-ad76-47fb-a8b1-23adb42390a1.json  901a6f55-5036-4e4f-9635-167a4f038725.json  c7b8f96c-30f8-4ebf-9e57-559c9fe890e7.json
vectoradd/openevolve_runs/run1/checkpoints/checkpoint_20/: best_program_info.json  metadata.json
vectoradd/openevolve_runs/run1/checkpoints/checkpoint_20/programs/: 04f12027-84a1-4bbb-a0c2-83bc4f87bf2d.json  518f5023-58d0-44d2-bc86-225cf9d1c39c.json  7999b423-bebc-4c03-a841-a1da22bd021c.json  8ad82f78-a77e-41b6-bacf-6bbe4e9684d9.json  ea027185-89d6-4c26-aec9-d8cc939f5a0d.json  feae4433-5b04-49ac-851f-2f9d58e16da4.json
vectoradd/openevolve_runs/run1/checkpoints/checkpoint_25/: best_program.py  best_program_info.json  metadata.json
vectoradd/openevolve_runs/run1/checkpoints/checkpoint_5/: best_program.py  best_program_info.json  metadata.json
(+13 files in other folders)
