[project]
name = "vectoradd-openevolve"
version = "0.1.0"
description = "OpenEvolve benchmark for float16 vector addition kernel on H100"
requires-python = ">=3.11"
dependencies = [
    "openevolve>=0.1.0",
    "modal>=0.73.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.0",
    "triton>=3.0.0",
    "torch>=2.6.0",
]
